fix: filters invisible on mobile

--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -40,6 +40,7 @@
     padding: 0 10px;
     position: absolute;
     width: 100%;
+    z-index: 1;
   }
 
   .inputs[aria-expanded='false'] {
